Complete student-oriented functions

--- a/templates/base_student.html
+++ b/templates/base_student.html
@@ -12,9 +12,9 @@
       <header>
         <h1>Consulting Institution Review and Management System</h1>
         <nav>
-          <a href="{{ url_for('home_inst')}}">Institution Home</a>
+          <a href="{{ url_for('student_portal')}}">Student Portal</a>
           <br/>
-          <a href="{{ url_for('list')}}">Institutions List and Search</a>
+          <a href="{{ url_for('list_student')}}">Institutions List and Search</a>
           <br/>
           <a href="{{url_for('home')}}">Back to Log in</a>
         </nav>
