--- a/templates/list_student.html
+++ b/templates/list_student.html
@@ -1,10 +1,10 @@
-{% extends 'base.html' %} 
+{% extends 'base_student.html' %} 
 
 {% block container %}
 
 <h1>List of Consulting Institutions</h1>
     <!-- Search Form -->
-    <form id="searchForm" action="{{ url_for('search') }}" method="post">
+    <form id="searchForm" action="{{ url_for('search_student') }}" method="post">
         <label for="searchQuery">Search:</label>
 
         <input type="text" id="name_inst" name="name_inst" placeholder="Enter Institution Name">
@@ -30,7 +30,7 @@
         <td>{{doc.name}}</td>
         <td>{{doc.base}}</td>
         <td>{{doc.desc}}</td>
-        <td><a href="{{ url_for('view_profile_inst', inst_id=doc._id)}}">Visit</a> | <a href="{{ url_for('edit', inst_id=doc._id)}}">Edit</a> | <a href="{{ url_for('delete_inst', inst_id=doc._id)}}">Delete</a></td>
+        <td><a href="{{url_for('view_profile_student', inst_id=doc._id)}}">Visit</a>  </td>
     </tr>
     {%endfor%}
 
