--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,6 +4,15 @@
   margin: 0 auto;
 }
 
+.review {
+  width: 500 px;
+  height: auto;
+  border: 1px solid black;
+  padding: 10px;
+  margin: 10px;
+  overflow-x: auto;
+}
+
 table {
   width: 100%;
   border-collapse: collapse;
