--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
-</head>
-<body>
-    <h1>Welcome to the Review Portal</h1>
-    <div>
-        <a href="/student">I am a Student</a>
-        <br>
-        <a href="/institution">I am an Institution</a>
-    </div>
-</body>
-</html>
+{% extends 'base_raw.html' %} 
+
+{% block container %}
+
+    <body>
+        <h1>Welcome to the Review and Management Portal</h1>
+        <h2>Please select your role:</h2>
+        <div>
+            <a href="/student">I am a Student</a>
+            <br><br>
+            <a href="/institution">I represent an Institution</a>
+        </div>
+    </body>
+    </html>
+
+{% endblock %}
