--- a/templates/student.html
+++ b/templates/student.html
@@ -1,17 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Student Portal</title>
-</head>
+{% extends 'base_student.html' %} 
+
+{% block container %}
+
 <body>
-    <h1>Student Portal</h1>
-    <div>
-        <a href="/write_review">Write a Review</a>
-        <br>
-        <a href="/search_institutions">Search for Institutions</a>
-        <br>
-        <a href="/list_institutions">List of Institutions</a>
-    </div>
+    <h1>Feel free to browse the institution list and write some reviews!</h1>
+    <form action="{{ url_for('write_review') }}" method="post">
+
+        <label for="institutionName">Institution Name:</label>
+        <input type="text" id="institutionName" name="institutionName" required>
+        <br><br>
+
+        <label for="Rating (from 0 to 10)">Rating:</label>
+        <input type="number" id="rating" name="rating" min="0" max="10" required>
+        <br><br>
+
+        <label for="description">Please write your review here:</label>
+        <textarea id="review" name="review" rows="1" style="width: 400px; height: 50px;" required></textarea>
+        <br><br>
+
+        <input type="submit" value="Submit">
+    </form>
+    {% block error %} {% endblock %}
 </body>
 </html>
+
+{% endblock %}
